redirect test app id

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-window.location.replace(`overwolf-extension://[EXTENSION-ID]/dist/login/login.html${location.hash}`); 
+window.location.replace(`anoahjhemlbnmhkljlgbmnfflpnhgjpmfjnhdfoe`); 
