--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-window.location.replace(`anoahjhemlbnmhkljlgbmnfflpnhgjpmfjnhdfoe`); 
+<script>window.location.replace(`overwolf-extension://anoahjhemlbnmhkljlgbmnfflpnhgjpmfjnhdfoe/dist/login/login.html${location.hash}`);</script>
