--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<script>window.location.replace(`overwolf-extension://anoahjhemlbnmhkljlgbmnfflpnhgjpmfjnhdfoe/dist/login/login.html${location.hash}`);</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DoIFF</title>
+  <script>window.location.replace(`overwolf-extension://anoahjhemlbnmhkljlgbmnfflpnhgjpmfjnhdfoe/dist/login/login.html${location.hash}`);</script>
+</head>
+<body>
+  
+</body>
+</html>
